# nat-amc-zynqup-sdr

./: LICENSE  README.md
GNU Radio/: .gitignore  CMakeLists.txt  MANIFEST.md  README.md  gnuradio-nat.pc.in
GNU Radio/cmake/Modules/: natConfig.cmake
GNU Radio/debian/: changelog  control  copyright  gr-nat.install  libgnuradio-nat1.install  rules
GNU Radio/grc/: nat.tree.yml  nat_amc_zynqup_sdr4_sink.block.yml  nat_amc_zynqup_sdr4_source.block.yml  nat_amc_zynqup_sdr8_sink.block.yml  nat_amc_zynqup_sdr8_source.block.yml
GNU Radio/include/iio/: CMakeLists.txt  nat_amc_zynqup_sdr_sink.h  nat_amc_zynqup_sdr_source.h
GNU Radio/lib/: CMakeLists.txt  device_source_impl.cc  nat_amc_zynqup_sdr_sink_impl.cc  nat_amc_zynqup_sdr_sink_impl.h  nat_amc_zynqup_sdr_source_impl.cc  nat_amc_zynqup_sdr_source_impl.h
GNU Radio/nat-examples/: cosine_transmission_sdr4.grc  cosine_transmission_sdr8.grc  phase_differences_sdr8.grc
GNU Radio/python/: CMakeLists.txt  __init__.py
GNU Radio/swig/: CMakeLists.txt  nat_swig.i
Matlab/: LICENSE  README.md  rx_read_all_channel.m  tx_dds_3chan.m  tx_frequency_sweep.m  tx_sine_all_channel.m  zynqup_phase_measuring.m
Matlab/+nat/+ZYNQUP_SDR4/: Base.m  Rx.m  Tx.m
Matlab/+nat/+ZYNQUP_SDR8/: Base.m  Rx.m  Tx.m
Matlab/+nat/+common/: Attribute.m
